package domain.prendas;

public interface Atributo {
}
