package domain.prendas;

public enum Categoria implements Atributo {
  CALZADO,
  SUPERIOR,
  INFERIOR,
  ACCESORIO
}
