package domain.prendas;

public class Color implements Atributo{
  int red;
  int green;
  int blue;

  public Color(int red, int green, int blue) {
    this.red = red;
    this.green = green;
    this.blue = blue;
  }
}
