package domain.prendas;

public enum Material implements Atributo {
  TELA,
  GABARDINA,
  NYLON,
  ALGODON,
  CUERO
}