package domain.prendas;

public enum Trama implements  Atributo{
  LISA,
  RAYADA,
  CON_LUNARES,
  A_CUADROS,
  ESTAMPADO
}
