@startuml
left to right direction
skinparam backgroundColor transparent
skinparam arrowFontColor royalblue
skinparam arrowColor royalblue
'https://plantuml.com/class-diagram

class Prenda{
Map<String,Atributo> atributos
categoria() : Categoria
agregarAtributo(Atributo atributo)
crearBorrador() : Borrador
}
class Tipo{
getCategoria()
}
class Color{
int red
int green
int blue
}

enum Material{
GABARDINA, NYLON, ALGODON
}
enum Categoria{
SUPERIOR, CALZADO, INFERIOR, ACCESORIO
}
enum Trama{
LISA,RAYADA,CON_LUNARES,A_CUADROS,ESTAMPADO
}

interface Atributo{
}

Prenda --right> "1" Tipo
Prenda --> "*" Atributo

Material ..up|> Atributo
Categoria ..up|> Atributo
Trama ..up|> Atributo
Color ..up|> Atributo

class Atuendo{
List<Prenda> prendas
 agregarPrenda(Prenda prenda)
}

Atuendo --> "*" Prenda

class Uniforme{
String nombreInstitucion

}

Uniforme --left|> Atuendo

@enduml